# object_localization

./: CMakeLists.txt  README.md  package.xml
config/: basic.yaml  xtion.yaml  zed.yaml
launch/: listener.launch  roslaunch_example.launch  xtion.launch  zed.launch
src/: listenerBaseLink.cpp  listenerCamera.cpp  object_loc_ROS.cpp
